# avapilot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TASK.md  cli.py  open-source-plan  pyproject.toml  requirements.txt  serve.py  test_error_tracking.sh  test_message_trimming.sh  test_rate_limiting.sh
.github/workflows/: ci.yml
avapilot/: __init__.py  api.py  cli.py
avapilot/avalanche/: __init__.py  _helpers.py  gateway.py  glacier.py  pchain.py  tools.py  tools_full.py  tools_platform.py  tools_read.py  tools_trade.py  wallet.py
avapilot/generator/: abi_fetcher.py  analyzer.py  avalanche.py  mcp_builder.py
avapilot/marketplace/: app.py  marketplace.db  models.py  registry.py
avapilot/registry/: __init__.py  models.py  seed.py  store.py
avapilot/runtime/: config.py  evm.py
backend/eleven_agent/: knowledge_pipeline.py
backend/orchestrator/: Dockerfile  __init__.py  agent_config.py  chat_agent.py  contract_analysis_agent.py  contract_analyzer.py  error_tracker.py  main.py  network_config.py  rate_limiter.py  requirements.txt  schemas.py  tools.py  transaction_agent.py  transaction_tool.py
backend/voice/: audio_buffer.py  main.py  requirements.txt  stt_service.py  tts_service.py  vad.py  voice_handler.py  voice_realtime.md
docs/: thinking.md
examples/trader-joe/: .env.example  README.md  (+2 more)
frontend/: index.html  test-voice-local.html  test-widget-local.html  test-widget-production.html
gateway-ui/: index.html  register.html
tests/: README.md  test_dynamic_tools.py  test_fuji.py  test_lazy_discovery.py  test_read_only.py
(+17 files in other folders)
